# test-infra

./: README.md  go.mod  go.sum  repos.bzl
pkg/io/: BUILD.bazel  opener.go  option.go
pkg/io/providers/: providers_test.go
prow/: Dockerfile.base
prow/apis/prowjobs/v1/: types.go  types_test.go
prow/cmd/checkconfig/: main.go
prow/cmd/deck/: BUILD.bazel  main.go
prow/cmd/gitee-hook/: BUILD.bazel  Dockerfile  main.go  plugins.go
prow/cmd/gitee-tide/: BUILD.bazel  main.go
prow/cmd/job-reporter/: BUILD.bazel  main.go  reporter.go
prow/cmd/job-reporter/gitee/: BUILD.bazel  client.go  reporter.go
prow/cmd/job-reporter/github/: BUILD.bazel  reporter.go
prow/crier/reporters/github/: BUILD.bazel  export.go
prow/docs/: code_review.md
prow/external-plugins/close-pr/: BUILD.bazel  main.go  server.go
prow/external-plugins/hookagent/: BUILD.bazel  Dockerfile  config.go  main.go  server.go
prow/external-plugins/hookagent/depoly/: depoly.sh
prow/external-plugins/sync-pr/: BUILD.bazel  config.go  gitee.go  main.go  server.go
prow/flagutil/: BUILD.bazel  gitee.go
prow/git/v2/: BUILD.bazel  client_factory.go  export.go
prow/gitee/: BUILD.bazel  client.go  error.go  github.go  interface.go  note_event.go  noteevent.go  util.go  webhooks.go
prow/gitee-hook/: BUILD.bazel  events.go  plugins.go  server.go
prow/gitee-plugins/: BUILD.bazel  config-agent.go  config.go  dispatcher.go  plugin.go  plugins.go  respond.go  util.go
prow/gitee-plugins/approve/: BUILD.bazel  approve.go  client.go  config.go
prow/gitee-plugins/assign/: BUILD.bazel  assign.go  client.go  config.go
prow/gitee-plugins/associate/: BUILD.bazel  associate.go  milestone.go  pr.go
prow/gitee-plugins/checkpr/: BUILD.bazel  checkpr.go
prow/gitee-plugins/cla/: BUILD.bazel  cla.go  client.go  config.go  faq.md
prow/gitee-plugins/cla-euler/: BUILD.bazel  cla.go  client.go  config.go  faq.md
prow/gitee-plugins/clone-repo/: BUILD.bazel  clone.go
prow/gitee-plugins/label/: BUILD.bazel  clear.go  config.go  label.go  note_handler.go  validate-label.go  validate_label.go
prow/gitee-plugins/lgtm/: BUILD.bazel  client.go  config.go  lgtm.go  notification.go  strict-review.go
prow/gitee-plugins/lifecycle/: BUILD.bazel  close.go  lifecycle.go  reopen.go
prow/gitee-plugins/review-trigger/: BUILD.bazel  algorithm.go  approve-tips.go  approve_tips.go  approver-helper.go  ci.go  client.go  comment.go  config.go  error.go  review.go  review.md  reviewer-helper.go  state.go
prow/gitee-plugins/review-trigger/approvers/: BUILD.bazel  algorithm.go  approvers.go  approvers_helper.go  models.go  owners.go  static_approvers.go
prow/gitee-plugins/slack/: BUILD.bazel  client.go  config.go  slack.go
prow/gitee-plugins/trigger/: BUILD.bazel  client.go  config.go  trigger.go
prow/gitee-tide/: BUILD.bazel  export.go  status.go  tide.go
prow/gitee-tide/client/: BUILD.bazel  client.go  comment.go  search.go
prow/github/: hmac.go
prow/github/report/: report.go
prow/jenkins/: BUILD.bazel  jenkins.go
prow/job-reporter/: BUILD.bazel  reporter.go
prow/job-reporter/gitee/: BUILD.bazel  client.go  comment.go  helper.go  job-comment.go  jobs-comment.go  reporter.go
prow/job-reporter/github/: BUILD.bazel  reporter.go
prow/plank/: controller.go
prow/pluginhelp/hook/: BUILD.bazel  export.go  hook.go
prow/plugins/: BUILD.bazel  config.go  export.go  respond.go
prow/plugins/approve/: BUILD.bazel  approve.go  export.go
prow/plugins/approve/approvers/: owners.go
prow/plugins/assign/: BUILD.bazel  export.go
prow/plugins/lgtm/: BUILD.bazel  export.go
prow/plugins/trigger/: BUILD.bazel  export.go  pull-request.go
prow/pod-utils/gcs/: BUILD.bazel  upload.go
prow/repoowners/: BUILD.bazel  another_implementation.go  another_implementation_test.go  other_implementation.go  other_implementation_test.go  repo_owners.md  repoowners.go  repoowners_test.go
prow/spyglass/: BUILD.bazel  spyglass.go  spyglass_test.go
