package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_go//go:def.bzl",
    "go_library",
    "go_test",
)

go_test(
    name = "go_default_test",
    srcs = [
        "hook_test.go",
        "server_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//prow/config:go_default_library",
        "//prow/github:go_default_library",
        "//prow/phony:go_default_library",
        "//prow/plugins:go_default_library",
        "//prow/repoowners:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
    ],
    importpath = "k8s.io/test-infra/prow/gitee-hook",
    deps = [
        "//prow/github:go_default_library",
        "//prow/hook:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
)
