load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "error.go",
        "github.go",
        "interface.go",
        "webhooks.go",
    ],
    importpath = "k8s.io/test-infra/prow/gitee",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/github:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
        "@com_github_antihax_optional//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["common_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//prow/apis/prowjobs/v1:go_default_library",
        "//prow/config:go_default_library",
        "//prow/io/providers:go_default_library",
    ],
)
