load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//prow:def.bzl", "prow_image")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "config.go",
        "server.go",
    ],
    importpath = "k8s.io/test-infra/prow/external-plugins/hookagent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/flagutil:go_default_library",
        "//prow/config:go_default_library",
        "//prow/config/secret:go_default_library",
        "//prow/flagutil:go_default_library",
        "//prow/git/v2:go_default_library",
        "//prow/gitee:go_default_library",
        "//prow/interrupts:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/pluginhelp/externalplugins:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

NAME = "hookagent"

prow_image(
    name = "image",
    base = "@git-base//image",
    component = NAME,
    visibility = ["//visibility:public"],
)

go_binary(
    name = NAME,
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
