load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "associate.go",
        "milestone.go",
        "pr.go",
    ],
    importpath = "k8s.io/test-infra/prow/gitee-plugins/associate",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/config:go_default_library",
        "//prow/gitee:go_default_library",
        "//prow/gitee-plugins:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
    ],
)
