load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "close.go",
        "lifecycle.go",
        "reopen.go",
    ],
    importpath = "k8s.io/test-infra/prow/gitee-plugins/lifecycle",
    visibility = ["//visibility:public"],
    deps = [
        "//prow/config:go_default_library",
        "//prow/gitee:go_default_library",
        "//prow/labels:go_default_library",
        "//prow/gitee-plugins:go_default_library",
        "//prow/pluginhelp:go_default_library",
        "//prow/plugins:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_gitee_openeuler_go-gitee//gitee:go_default_library",
    ],
)


filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
